faz pequena correção no título

--- a/slides/s3/03-condicionais/condicionais.tex
+++ b/slides/s3/03-condicionais/condicionais.tex
@@ -61,7 +61,7 @@
 
 \title{\insertlecture}
 
-\author{Prof. Fernando Figueira\\(adaptado do material do Prof. Rafael Beserra Gomes}
+\author{Prof. Fernando Figueira\\(adaptado do material do Prof. Rafael Beserra Gomes)}
 
 \institute{UFRN}
 
